# bv_research

./: .gitignore  README.md  extract_frames.py  requirements.txt
2026-obj-det/: .example.env  READEME.md  README.md  config.py  data.yaml  environment.yml  quick_batch.py  requirements.txt
2026-obj-det/scripts/: config.py  lt-large.py  lt-tiny.py  ltDETRViiT.py  rf-base.py  rt-large.py  test_pipeline.py  yolo26l.py  yolo26s.py  yolov12.py  yolov12Resume.py
2026-obj-det/test-results/2026-03-10 15:08:42.208022/lt-large/: predictions_raw.json
2026-obj-det/test-results/2026-03-10 15:08:42.208022/lt-tiny/: predictions_raw.json
Calibration/: README  aruco_calib.py
DataGenPipeline/: README.md  main.py
DataGenPipeline/steps/: copy_mannequins.py  enhance_resolution.py  generate_tents.py  io.py  paste_mannequins.py  remove_watermark.py  utils.py
DinoDetr/: rf_detr.py  rf_detr_crop.py  test.py  yolo_baseline.py
ImageSplit/: SplitImages.py
ImageStitching/Python/: Image_Stitching_SIFT.py
ShapeModel/Training/: auto_sbatch.sh  config_creator.py  data.yaml  submit_job.sh  train.py
ShapeModel/Training/configs/: config1.yaml  config16.yaml  config2.yaml  config3.yaml  config4.yaml  config5.yaml
ShapeModel/stanford_data/: CMakeLists.txt  data_builder  data_builder.cpp  data_builder.h  helpers.cpp  helpers.h  parse_anno.cpp  parse_vid.cpp  reorganize_sdd.cpp  sdd_parser.cpp  sdd_parser.h  structs.h
ShapeModel/train_test_tune_pipeline/: testtemp.py
Stream/: README.md  requirements.txt  stream.py
TestModel/: README.md  main.py  requirements.txt
(+4 files in other folders)
